--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -144,6 +144,9 @@
   "removeFromFavorites": "Удалить из избранного",
   "deleteSelection": "Множественный выбор",
   "importFromPreviousMonth": "Импортировать из предыдущего месяца",
+  "supportSectionTitle": "Вам нравится наш проект?",
+  "supportMessage": "Если он помогает вам в повседневной жизни и вы хотите поддержать проект, мы будем очень благодарны. Поддержка на 100% добровольная и не открывает дополнительных преимуществ. Это просто способ сказать «спасибо».",
+  "supportButton": "Поддержать проект",
   "@backupSavedAt": {
     "placeholders": {
       "path": {
